--- a/internal/certauth/views/1_certificate_select.hbs
+++ b/internal/certauth/views/1_certificate_select.hbs
@@ -12,7 +12,7 @@
             <h1 class="ui header">
                 <i class="id card outline icon"></i>
                 <div class="content">
-                    Authentication with eIDAS Certificate
+                    Register or Login with eIDAS Certificate
                     <div class="sub header">Certificate Selection Required</div>
                 </div>
             </h1>
@@ -24,7 +24,16 @@
                     select a certificate from your certificate store.
                 </div>
             </div>
-            <p>The application requires you to select a certificate for authentication.</p>
+            <p>
+                You can register or login with you eIDAS certificate.
+            </p>
+            <p>
+                If you are already registered, you will use you certificate to enter your private area.
+                Otherwise, we will request your email, verify it and we will register you in our system.
+            </p>
+            <p>
+                If you have registered or logged in recently you will be taken directly to your private area.
+            </p>
             <div class="ui divider"></div>
             <p>Click the button below to proceed with certificate selection:</p>
             <button class="ui blue large button" onclick="proceedWithCertificate()">
