--- a/internal/onboard/views/login.hbs
+++ b/internal/onboard/views/login.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>ISBE Onboarding - Login</title>
+    <title>ISBE Onboarding - Register or Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -61,11 +61,11 @@
                 The final design will explain the whole process to users.
             </p>
             <p>
-                To continue, you need to login with your eIDAS certificate. 
+                To continue, you need to register or login with your eIDAS certificate. 
                 Click the button below.</p>
         </div>
         <div style="text-align: center;">
-            <a href="/login" class="button">Login with Certificate</a>
+            <a href="/login" class="button">Register or Login with Certificate</a>
         </div>
     </div>
 </body>
